# mq-dev-patterns

./: .gitattributes  .gitignore  LICENSE  README.md  ccdt.json  clientkey.kdb  clientkey.sth  env-cloud.json  env-zbindings.json  env.json  env_simple.json
C/: .gitignore  Makefile  README.md  amqsbcg0.c  amqsecha.c  amqsgbr0.c  amqsget0.c  amqspuba.c  amqsput0.c  amqsreq0.c  amqssuba.c  common.c  common.h  config.c  config.h  conn.c  conn.h  get_pass.c  get_pass.h  makefile  sampleget.c  samplepublish.c  sampleput.c  samplerequest.c  sampleresponse.c  samplesubscribe.c  win_bld.bat  win_dev.bat
Go/: README.md  go.mod  go.sum  setgopath.sh
Go-K8s/: .dockerignore  .gitignore  Dockerfile  README.md  buildInDocker.sh  go.mod  go.sum  receive.go  send.go
JMS/: README.md  dependency-reduced-pom.xml  pom-jakarta.xml  pom.xml
Java-MQ/: README.md  Readme.md  dependency-reduced-pom.xml  env.json  pom.xml
Node.js/: .env  README.md  basicget.js  basicpublish.js  basicput.js  basicrequest.js  basicresponse.js  basicsubscribe.js  boilerplate.js  package-lock.json  package.json  sampleget.js  samplepublish.js  sampleput.js  samplerequest.js  sampleresponse.js  samplesubscribe.js
Node.js-OTel/: Dockerfile.mqapp  README.md  app.js  docker-compose.yaml  env.json  package-lock.json  package.json  qm.js
OpenLiberty-MDB/: README.txt
Python/: README.md  __init__.py  basicget.py  basicpublish.py  basicput.py  (+4 more)
Rust-REST/Rust_REST_Delete/: Cargo.toml
Rust-REST/Rust_REST_Delete/src/: file.rs  main.rs  rest_get.rs
Rust-REST/Rust_REST_Delete/src/structures/: login.rs
(+600 files in other folders)
