[package]
name = "rust_rest_delete"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
base64 = "0.13.0"
http = "0.2.4"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
